--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    viewBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -44,6 +48,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     // View Model
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
 
     // Logger
@@ -56,6 +61,9 @@ dependencies {
 
     // Testing
     testImplementation "org.koin:koin-test:$koin_version"
+
+    //Lottie
+    implementation "com.airbnb.android:lottie:$lottieVersion"
 
 
 }
