--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     ext.kotlin_version = "1.4.21"
     ext.koin_version = "2.2.2"
+    ext.lottieVersion = "3.6.0"
     repositories {
         google()
         jcenter()
