--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.OuterWorlds">
-        <activity android:name=".features.shipcreator.ShipCreatorActivity"></activity>
-        <activity
-            android:name=".features.splash.SplashActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar">
+
+        <activity android:name=".features.shipcreator.ShipCreatorActivity" />
+        <activity android:name=".features.splash.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
