--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,11 +66,14 @@ dependencies {
     testImplementation "org.koin:koin-test:$koin_version"
 
     //Lottie
-    implementation "com.airbnb.android:lottie:$lottieVersion"
+    implementation "com.airbnb.android:lottie:$lottie_version"
 
     //Material Views
-    implementation "com.google.android.material:material:$materialVersion"
+    implementation "com.google.android.material:material:$material_version"
 
-
-
+    //Room
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    testImplementation "androidx.room:room-testing:$room_version"
 }
