--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,9 @@
 buildscript {
     ext.kotlin_version = "1.4.21"
     ext.koin_version = "2.2.2"
-    ext.lottieVersion = "3.6.0"
-    ext.materialVersion = "1.3.0"
+    ext.lottie_version = "3.6.0"
+    ext.material_version = "1.3.0"
+    ext.room_version = "2.3.0-beta01"
     repositories {
         google()
         jcenter()
