--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.OuterWorlds">
-
+        <activity android:name=".features.stationlist.StationListActivity"></activity>
         <activity android:name=".features.shipcreator.ShipCreatorActivity" />
         <activity android:name=".features.splash.SplashActivity">
             <intent-filter>
