--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ozturkburak.outerworlds">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:name=".application.OuterWorldsApp"
         android:allowBackup="true"
@@ -9,6 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.OuterWorlds">
         <activity android:name=".features.stationlist.StationListActivity"></activity>
         <activity android:name=".features.shipcreator.ShipCreatorActivity" />
