--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,9 @@ buildscript {
     ext.lottie_version = "3.6.0"
     ext.material_version = "1.3.0"
     ext.room_version = "2.3.0-beta01"
+    ext.retrofit_version = "2.7.1"
+    ext.okhttp_version = "4.3.1"
+    ext.lifecycle_version = "2.2.0"
     repositories {
         google()
         jcenter()
