--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:name=".base.OuterWorldsApp"
+        android:name=".OuterWorldsApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -13,9 +13,9 @@
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
         android:theme="@style/Theme.OuterWorlds">
-        <activity android:name=".features.stationlist.StationListActivity"></activity>
-        <activity android:name=".features.shipcreator.ShipCreatorActivity" />
-        <activity android:name=".features.splash.SplashActivity">
+        <activity android:name=".ui.stationlist.StationListActivity"></activity>
+        <activity android:name=".ui.shipcreator.ShipCreatorActivity" />
+        <activity android:name=".ui.splash.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
